dev/tests/cases/neg/20_negate_str.tv
df main() -> void {
    set s: str = "x";
    echo!(-s);
}
